--- a/src/styles/screens.scss
+++ b/src/styles/screens.scss
@@ -1,11 +1,29 @@
 /* Screens */
+
 .game-over {
-	border: 5px solid red;
-	font-weight: bold;
-	font-size: 30px;
-	text-transform: uppercase;
-	width: 500px;
-	max-width: 80%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	max-width: 100%;
+
+	p {
+		border: 5px solid red;
+		font-weight: bold;
+		font-size: 30px;
+		text-transform: uppercase;
+		padding: 1rem 0;
+		margin: 0;
+		width: 500px;
+		max-width: 100%;
+
+		@media screen and (max-width: 767px) {
+			max-width: 90%;
+		}
+	}
+
+	button {
+		margin-top: 2rem;
+	}
 }
 
 .start-screen {
@@ -23,7 +41,10 @@
 			color: green;
 		}
 	}
+}
 
+.start-screen,
+.game-over {
 	button {
 		background: green;
 		position: relative;
